--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculum Vitae</title>
+    <title>Mi Proyecto</title>
 </head>
 <body>
-    
+    <h1>Bienvenido a mi página web</h1>
+    <p>Este es el contenido de mi proyecto en GitHub Pages.</p>
 </body>
 </html>
