--- a/index.html
+++ b/index.html
@@ -3,10 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Proyecto</title>
+    <title>Mi CV - Anellisse Herrera</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bienvenido a mi página web</h1>
-    <p>Este es el contenido de mi proyecto en GitHub Pages.</p>
+    <header>
+        <h1>Hola, soy Anellisse Herrera</h1>
+        <p>Ingeniera en Sistemas | Desarrolladora de software | Entusiasta de la tecnología</p>
+        <nav>
+            <ul>
+                <li><a href="#experiencia">Experiencia</a></li>
+                <li><a href="#educacion">Educación</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#contacto">Contacto</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <section id="experiencia">
+        <h2>Experiencia Profesional</h2>
+        <div class="job">
+            <h3>Desarrolladora de Software - Empresa XYZ</h3>
+            <p>Junio 2023 - Actualidad</p>
+            <ul>
+                <li>Desarrollo de aplicaciones web usando HTML, CSS, JavaScript.</li>
+                <li>Optimización de procesos y manejo de bases de datos en MySQL.</li>
+            </ul>
+        </div>
+        <div class="job">
+            <h3>Prácticas en Ingeniería en Sistemas - Empresa ABC</h3>
+            <p>Febrero 2022 - Mayo 2023</p>
+            <ul>
+                <li>Implementación de algoritmos en Java y C.</li>
+                <li>Trabajo en proyectos colaborativos con equipos multidisciplinarios.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="educacion">
+        <h2>Educación</h2>
+        <div class="degree">
+            <h3>Licenciatura en Ingeniería en Sistemas</h3>
+            <p>Universidad ABC | 2020 - 2024 (esperado)</p>
+            <ul>
+                <li>Promedio: 9.2</li>
+                <li>Cursos relevantes: Programación en C, Estructuras de Datos, Análisis de Algoritmos.</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="habilidades">
+        <h2>Habilidades Técnicas</h2>
+        <ul>
+            <li>Lenguajes de programación: C, Java, JavaScript, Python</li>
+            <li>Desarrollo web: HTML, CSS, Bootstrap, React</li>
+            <li>Bases de datos: MySQL, PostgreSQL</li>
+            <li>Herramientas: Git, GitHub, Visual Studio Code</li>
+        </ul>
+    </section>
+
+    <section id="contacto">
+        <h2>Contacto</h2>
+        <p>Correo: anellisse.herrera@correo.com</p>
+        <p>GitHub: <a href="https://github.com/Annnhema" target="_blank">github.com/Annnhema</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/anellisse-herrera/" target="_blank">linkedin.com/in/anellisse-herrera/</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Anellisse Herrera</p>
+    </footer>
 </body>
 </html>
