--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2024 Anellisse Herrera</p>
+        <p>&copy; 2024 Anellisse Herrera Maldonado</p>
     </footer>
 </body>
 </html>
